# wagtail-image-uploader

./: .gitignore  .image_uploader.toml.example  MANIFEST.in  README.rst  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
image_uploader/: config.py  models.py  services.py  views.py
image_uploader/migrations/: 0001_initial.py  0002_alter_imageuploadaccesskey_key.py
image_uploader/processors/: post_processor.py  pre_processor.py
mysite/: urls.py
mysite/settings/: base.py  dev.py
src/image_uploader/: apps.py  cli.py  client.py  config.py  factory.py  server.py  services.py  urls.py  utils.py  views.py
src/image_uploader/management/commands/: get_upload_key.py
src/image_uploader/migrations/: 0002_alter_imageuploadaccesskey_key.py
src/image_uploader/processors/: post_processor.py  pre_processor.py
testsite/: testing.py
testsite/mysite/settings/: base.py  production.py
